--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-      "heroku-postbuild": "ng build --prod",
+    "heroku-postbuild": "ng build --prod",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
     "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "dialogflow": "^1.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "uuid": "^8.3.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
@@ -41,10 +43,7 @@
     "typescript": "~4.6.2"
   },
   "engines": {
-
     "npm": "8.5.0",
-
     "node": "v16.14.2"
-
-}
   }
+}
